<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title for the home screen -->
    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Button to create a new sticker sheet -->
    <Button
        android:id="@+id/new_sticker_sheet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sticker_sheet_btn"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Section for sticker sheets in progress -->
    <Button
        android:id="@+id/currentStickerSheetsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Sticker Sheets"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/new_sticker_sheet_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Section for finished sticker sheets -->
    <TextView
        android:id="@+id/finished_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/currentStickerSheetsButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
