<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/saved_sticker_sheet_layout"
    tools:context=".NewStickerSheetActivity">


    <!-- EditText for Sticker Sheet Title -->
    <TextView
        android:id="@+id/saved_sticker_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sticker_sheet_title_hint"
        android:textSize="24sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill"
        android:background="@drawable/cell_border"
        android:textColorHint="@color/black"
        android:minHeight="48dp"
        android:minWidth="48dp"
        />


    <TableLayout
        android:id="@+id/saved_sticker_sheet_table"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:shrinkColumns="0,1,2,3"
        android:stretchColumns="1,2,3,4"
        app:layout_constraintTop_toBottomOf="@id/saved_sticker_sheet_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cell_border">

        <!-- First row -->
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/category_1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_category_1"
                />
            <TextView
                android:hint="@string/task_1.1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_1_1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_1.2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_1_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_1.3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_1_3"
                />
        </TableRow>

        <!-- Second row -->
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/category_2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_category_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_2.1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_2_1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_2.2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_2_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_2.3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_2_3"
                />
        </TableRow>

        <!-- Third row -->
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/category_3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_category_3"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_3.1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_3_1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_3.2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_3_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_3.3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_3_3"
                />
        </TableRow>

        <!-- Fourth row -->
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/category_4"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_category_4"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_4.1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_4_1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_4.2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_4_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_4.3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_4_3"
                />
        </TableRow>

        <!-- Fifth row -->
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/category_5"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_category_5"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_5.1"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_5_1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_5.2"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_5_2"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:hint="@string/task_5.3"
                tools:ignore="Autofill"
                android:textColorHint="@color/black"
                android:gravity="top|start"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/cell_border"
                android:id="@+id/saved_task_5_3"
                />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintTop_toBottomOf="@id/saved_sticker_sheet_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>

